--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -143,7 +143,7 @@
     width: 95%;
   }
 }
-/*0 to 600 px */
+/*376 to 600 px */
 @media only screen and (max-width: 600px) {
   #home {
     height: 70%;
@@ -193,6 +193,23 @@
   }
   .links {
     font-size: 15px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  #home {
+    height: 50%;
+  }
+  #projects {
+    height: 125%;
+  }
+  #about {
+    height: 260%;
+  }
+  .bio {
+    font-size: 10px;
+  }
+  #contacts {
+    height: 100%;
   }
 }
 @media (min-width: 2100px) {
