--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -195,7 +195,7 @@
     font-size: 15px;
   }
 }
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 375px) {
   #home {
     height: 50%;
   }
