--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -144,7 +144,7 @@
   }
 }
 /*376 to 600 px */
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   #home {
     height: 70%;
   }
