--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -353,6 +353,7 @@ hr {
   margin-top: 50px;
   width: 80%;
 }
+/* left-contact*/
 .left-contact {
   margin-top: 50px;
   opacity: 0.7;
@@ -407,7 +408,7 @@ hr {
 .fa-instagram:hover {
   color: #8a3ab9;
 }
-
+/* right-contact */
 .right-contact {
   margin-top: 50px;
 }
